--- a/index.html
+++ b/index.html
@@ -1,11 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="style.css">
+    <title>BMI Calculator</title>
 </head>
+
 <body>
-    
+    <div class="container">
+        <h1>BMI Calculator</h1>
+
+        <p>Height (cm)</p>
+        <input type="text">
+
+        <p>Weight (kg)</p>
+        <input type="text">
+
+        <button>Calculate</button>
+
+        <div>Result</div>
+    </div>
 </body>
+
 </html>
